--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                 
                 // Добавляем элементы в DOM
                 bannerContainer.appendChild(iframe);
-                bannerContainer.appendChild(bannerText);
                 bannerItem.appendChild(bannerContainer);
+                bannerItem.appendChild(bannerText);
                 grid.appendChild(bannerItem);
             });
         }
