--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400,500&display=swap" rel="stylesheet">
     <title>HTML5 ДелоБанка версии</title>
     <style>
         * {
@@ -40,7 +43,11 @@
             text-align:center;
             
         }
-
+    .banner-item-text {
+        font-size: 14px;
+        font-family: "Montserrat", sans-serif;
+        font-weight: 500;
+    }
         
         .banner-container {
             border-radius: 8px;
@@ -129,7 +136,7 @@
                 // Добавляем элементы в DOM
                 bannerContainer.appendChild(iframe);
                 bannerItem.appendChild(bannerContainer);
-                bannerItem.appendChild(bannerText);
+                bannerItem.prepend(bannerText);
                 grid.appendChild(bannerItem);
             });
         }
