--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400,500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>HTML5 ДелоБанка версии</title>
     <style>
         * {
@@ -49,7 +49,7 @@
         font-family: "Montserrat", sans-serif;
         font-weight: 500;
         color:#4C4F51;
-        padding:40px;
+        margin-bottom:20px;
     }
         
         .banner-container {
@@ -102,9 +102,9 @@
     <script>
         // Конфигурация баннеров
         const bannersConfig = [
-            {name: 'banner1', folder: 'banners/banner-1/', htmlFile: 'index.html', width: 300, height: 500, text:"Всякая херня" },
-            {name: 'banner2', folder: 'banners/banner-2/', htmlFile: 'index.html', width: 300, height: 500 }, 
-            {name: 'banner3', folder: 'banners/banner-3/', htmlFile: 'index.html', width: 300, height: 500 }, 
+            {name: 'banner1', folder: 'banners/banner-1/', htmlFile: 'index.html', width: 300, height: 500, text:"Версия #1. Полноценный рестарт анимации"},
+            {name: 'banner2', folder: 'banners/banner-2/', htmlFile: 'index.html', width: 300, height: 500, text:"Версия #2. Появление элементов снизу вверх проигрывается 1 раз. Иллюзия движения шара вверх"}, 
+            {name: 'banner3', folder: 'banners/banner-3/', htmlFile: 'index.html', width: 300, height: 500, text:"Версия #3. Анимация появления элементов проигрывается 1 раз. Более динамичный старт со сдвигом влево. Иллюзия движения шара в горизонтальной плоскости"}, 
 
             
             // Добавляйте новые баннеры здесь по мере их создания
