--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
         }
     .banner-item-text {
-        font-size: 14px;
+        font-size: 12px;
         font-family: "Montserrat", sans-serif;
         font-weight: 500;
         color:#4C4F51;
@@ -62,6 +62,7 @@
             align-items: center;
             justify-content: center;
             padding:0;
+            overflow:hidden;
         }
         
         .banner-container canvas {
@@ -102,7 +103,7 @@
     <script>
         // Конфигурация баннеров
         const bannersConfig = [
-            {name: 'banner1', folder: 'banners/banner-1/', htmlFile: 'index.html', width: 300, height: 500, text:"Версия #1. Полноценный рестарт анимации"},
+            {name: 'banner1', folder: 'banners/banner-1/', htmlFile: 'index.html', width: 300, height: 500, text:"<bold>Версия #1.</bold> Полноценный рестарт анимации"},
             {name: 'banner2', folder: 'banners/banner-2/', htmlFile: 'index.html', width: 300, height: 500, text:"Версия #2. Появление элементов снизу вверх проигрывается 1 раз. Иллюзия движения шара вверх"}, 
             {name: 'banner3', folder: 'banners/banner-3/', htmlFile: 'index.html', width: 300, height: 500, text:"Версия #3. Анимация появления элементов проигрывается 1 раз. Более динамичный старт со сдвигом влево. Иллюзия движения шара в горизонтальной плоскости"}, 
 
