--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         const bannersConfig = [
             {name: 'banner1', folder: 'banners/banner-1/', htmlFile: 'index.html', width: 300, height: 500, text:"Версия #1. Анимация проигрывается бесконечно. Полный перезапуск сценария"},
             {name: 'banner2', folder: 'banners/banner-2/', htmlFile: 'index.html', width: 300, height: 500, text:"Версия #2. Появление элементов снизу вверх проигрывается 1 раз. Иллюзия движения шара вверх"}, 
-            {name: 'banner3', folder: 'banners/banner-3/', htmlFile: 'index.html', width: 300, height: 500, text:"Версия #3. Анимация появления элементов проигрывается 1 раз. Более динамичный старт со сдвигом влево. Иллюзия движения шара в горизонтальной плоскости"}, 
+            {name: 'banner3', folder: 'banners/banner-3/', htmlFile: 'index.html', width: 300, height: 500, text:"Версия #3. Более динамичный старт со сдвигом влево (проигрывается 1 раз). Иллюзия движения шара в горизонтальной плоскости"}, 
 
             
             // Добавляйте новые баннеры здесь по мере их создания
