--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         .banner-container {
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            border:1px solid #999;
+            border:1px solid #B8C1C5;
             width: 300px;
             height: 500px;
             display: flex;
